styles/main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --main-bg: #000;
  --header-bg1: rgb(42, 10, 82);
  --header-bg2: rgb(96, 71, 147);
  --h1-color: rgba(128, 101, 236, 0.908);
  --h2-underline-color: rgb(176, 133, 211);
  --main-links-hover: rgb(197, 125, 255);
  --hb-main-nav-links-hover: rgb(96, 71, 147);
  --main-text-color: #fff;
  --navbar-bg: rgb(30, 6, 59);
  --section-navbar-bg: rgb(33, 3, 64);
}

body {
  background: var(--main-bg);
  color: var(--main-text-color);
  width: 100%;
  height: 100vh;
}

html {
  scroll-behavior: smooth;
}

/* Heading Section */
header {
  height: 120px;
  padding: 10px;
  background: linear-gradient(
    90deg,
    var(--header-bg1) 30%,
    var(--header-bg2) 80%
  );
  display: flex;
  align-items: center;
  position: relative;
}

.logo {
  object-fit: cover;
  max-width: 100px;
  width: 30%;
  height: auto;
  border-radius: 10px;
  margin-right: 5px;
}

.heading-content {
  height: 100px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.heading-content h1 {
  margin-bottom: 6px;
  color: var(--h1-color);
  font-family: "Michroma", sans-serif;
  font-size: clamp(1rem, 3.5vw, 1.5rem);
  font-weight: 400;
  font-style: normal;
}

.heading-content p {
  font-family: "Edu SA Hand", cursive;
  font-size: clamp(0.7rem, 3.5vw, 0.9rem);
}

/* Navigation bar section */
nav * {
  font-family: "Orbitron", sans-serif;
}

.navbar {
  height: 60px;
  background: var(--navbar-bg);
  padding: 0.8rem 1rem;
  position: relative;
}

.hamburger {
  background: none;
  border: none;
  color: var(--main-color);
  font: normal 1.5rem sans-serif;
  cursor: pointer;
  display: none;
}

.main-links {
  height: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  overflow: hidden;
}

.main-links.show {
  display: flex;
}

.main-links li {
  list-style: none;
  cursor: pointer;
  transition: transform 0.3s ease;
}

.main-links li a {
  color: var(--main-text-color);
  text-decoration: none;
  font-size: clamp(0.8rem, 3vw, 1.1rem);
  position: relative;
}

.main-links li a::after {
  content: "";
  position: absolute;
  width: 0;
  height: 2px;
  bottom: -8px;
  left: 0;
  background: var(--main-links-hover);
  transition: width 0.5s ease;
}

.main-links li a:hover::after {
  width: 100%;
}

/* Responsive Navbar Section */
@media (max-width: 760px) {
  .hamburger {
    display: block;
  }

  .navbar {
    display: flex;
    justify-content: flex-end;
  }

  .main-links {
    display: none;
    background: var(--navbar-bg);
    flex-direction: column;
    position: absolute;
    width: 100%;
    height: fit-content;
    left: 0;
    top: 100%;
  }

  .main-links li {
    width: 100%;
    padding: 0.7rem 10px;
    text-align: center;
    overflow: hidden;
  }

  .main-links li:hover {
    font-weight: bold;
    background: var(--hb-main-nav-links-hover);
  }
}

/* All sections */

main {
  box-sizing: border-box;
  margin: 10px;
}

.main-link-section {
  background: var(--section-navbar-bg);
  width: 100%;
  padding: 10px;
  margin-bottom: 15px;
  border-radius: 8px;
}

.main-link-section fieldset {
  border: none;
  padding: 10px;
}

.main-link-section fieldset legend {
  font-family: "Michroma", sans-serif;
  font-weight: bold;
  background: rgb(52, 1, 101);
  color: rgb(215, 167, 255);
  border-radius: 8px;
  width: fit-content;
  padding: 5px 15px;
  margin-bottom: 10px;
  margin-left: 15px;
}

.main-link-section fieldset nav {
  width: 100%;
  background: var(--header-bg2);
  border-radius: 8px;
  text-align: center;
  padding: 5px 10px;
  transition: all 0.2s;
}

.main-link-section fieldset nav:hover {
  transform: scale(1.01);
  box-shadow: 2px 5px 8px 4px rgb(26, 1, 49);
}

.main-link-section fieldset nav .searchBar {
  padding-block: 10px 20px;
  display: flex;
  gap: 10px;
  justify-content: space-between;
  align-items: center;
}

.searchBar input,
.searchBar button {
  padding: 5px 20px;
  border-radius: 16px;
  border: none;
  outline: none;
  box-shadow: 2px 5px 8px 1px rgb(64, 44, 76);
}

.searchBar input {
  width: 100%;
}

.searchBar button {
  cursor: pointer;
  font-weight: bold;
}

.main-link-section fieldset nav ul {
  list-style: none;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.main-link-section fieldset nav ul li {
  text-decoration: none;
}

.main-link-section fieldset .content {
  padding: 10px;
  margin-block: 10px;
}

.main-link-section fieldset .content h2 {
  padding: 4px 22px;
  margin-left: 22px;
  border-bottom: 2px solid var(--h2-underline-color);
  font: normal 1.02rem "Michroma", sans-serif;
  position: relative;
}

.main-link-section fieldset .content h2::before {
  content: "";
  width: 25px;
  height: 25px;
  background: var(--h2-underline-color);
  position: absolute;
  bottom: -12px;
  left: -15px;
  transform: rotate(50deg);
}

.main-link-section fieldset .content .sub-content {
  background: rgba(145, 0, 255, 0.359);
  border-radius: 8px;
  padding: 15px 10px;
  margin: 15px 0px 10px 30px;
  font-family: "Orbitron", sans-serif;
}

/* Responsive main-link Section */
@media (max-width: 760px) {
  main {
    text-align: center;
    margin: 0px 0px 10px 0px;
  }

  .main-link-section fieldset legend {
    margin-left: 0;
  }

  .main-link-section fieldset nav .searchBar {
    flex-direction: column;
  }

  .main-link-section fieldset .content h2 {
    margin-left: 0;
  }

  .main-link-section fieldset .content .sub-content {
    margin: 15px 0px;
  }
}

